--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -22,12 +22,11 @@
       <a href="tenclass.html" class="w-full text-center bg-purple-600 hover:bg-purple-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
         🎓 Generate 10 Class
       </a>
-       <a href="lete.html" class="w-full text-center bg-red-600 hover:bg-purple-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
+      
+      <a href="lete.html" class="w-full text-center bg-red-600 hover:bg-red-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
         📄 Generate Letterhead
       </a>
     </div>
   </div>
 </body>
 </html>
-
-
