--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -26,7 +26,12 @@
       <a href="lete.html" class="w-full text-center bg-red-600 hover:bg-red-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
         📄 Generate Letterhead
       </a>
+
+      <a href="letter2.html" class="w-full text-center bg-red-600 hover:bg-red-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
+        📄 Organization Letterhead
+      </a>
     </div>
   </div>
 </body>
 </html>
+
