--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -27,11 +27,12 @@
         📄 Generate Letterhead
       </a>
 
-      <a href="letter2.html" class="w-full text-center bg-red-600 hover:bg-red-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
+      <a href="letter2.html" class="w-full text-center bg-yellow-600 hover:bg-yellow-700 text-white py-3 rounded-xl shadow-md font-semibold transition transform hover:-translate-y-1 hover:shadow-lg">
         📄 Organization Letterhead
       </a>
     </div>
   </div>
 </body>
 </html>
+
 
