--- a/letter2.html
+++ b/letter2.html
@@ -87,7 +87,8 @@
       <div class="text-left text-sm leading-relaxed text-gray-800 font-medium">
         <p class="font-bold text-lg">NOHAR SAHU</p>
         <p class="italic">Director</p>
-        <p>SAMARTH PUBLIC SCHOOL KHATI <span class="font-semibold">President</span></p>
+        <p>SAMARTH PUBLIC SCHOOL KHATI </p>
+           <p class="italic">President</p>
         <p>EFFORT FOUNDATION CHHATTISGARH</p>
         <p class="mt-1">📞 9575482080</p>
         <p>✉️ noharsahu2646@gmail.com</p>
@@ -134,3 +135,4 @@
 
 </body>
 </html>
+
