--- a/lete.html
+++ b/lete.html
@@ -64,12 +64,12 @@
 
         <div class="font-bold text-lg tracking-wide">SAMARTH PUBLIC SCHOOL KHATI (ENGLISH MEDIUM)</div>
         <div class="text-sm font-semibold mt-1">(CLASS – NURSERY TO TENTH)</div>
-        <div class="text-xs mt-1 uppercase">RUN BY :- EFFORT FOUNDATION CHHATTISGARH</div>
-        <div class="text-xs mt-1">GADAGHAT ROAD VILLAGE – KHATI, P.O. – BHUSANDI, BLOCK – SAJA, DIST. – BEMETARA (C.G.)</div>
-        <div class="text-xs mt-1">
-          Pin code - 491335 , Phone No. 9575482080 , 
-          Email: <span class="text-blue-700">samarthpublicschoolkhati2019@gmail.com</span>
-        </div>
+        <div class="text-xs mt-1 uppercase text-gray-800 font-semibold">RUN BY :- EFFORT FOUNDATION CHHATTISGARH</div>
+<div class="text-xs mt-1 text-gray-800 font-semibold">GADAGHAT ROAD VILLAGE – KHATI, P.O. – BHUSANDI, BLOCK – SAJA, DIST. – BEMETARA (C.G.)</div>
+<div class="text-xs mt-1 text-gray-800 font-semibold">
+  Pin code - 491335 , Phone No. 9575482080 , 
+  Email: <span class="text-blue-700">samarthpublicschoolkhati2019@gmail.com</span>
+</div>
 
         <div class="flex justify-between items-center text-xs font-semibold mt-3 border-b-2 border-gray-800 pb-2">
           <span>REG. NO. – 2019004</span>
@@ -103,4 +103,5 @@ document.getElementById("logoUpload").addEventListener("change", function(e){
 </script>
 </body>
 </html>
+
 
