--- a/lete.html
+++ b/lete.html
@@ -63,7 +63,7 @@
              class="absolute left-6 top-4 w-20 h-20 object-contain"/>
 
         <div class="font-bold text-lg tracking-wide">SAMARTH PUBLIC SCHOOL KHATI (ENGLISH MEDIUM)</div>
-        <div class="text-sm font-semibold mt-1">(CLASS – NURSERY TO TENTH)</div>
+        <div class="text-sm font-semibold mt-1">(CLASS – NURSERY TO 10TH)</div>
         <div class="text-xs mt-1 uppercase text-gray-800 font-semibold">RUN BY :- EFFORT FOUNDATION CHHATTISGARH</div>
 <div class="text-xs mt-1 text-gray-800 font-semibold">GADAGHAT ROAD VILLAGE – KHATI, P.O. – BHUSANDI, BLOCK – SAJA, DIST. – BEMETARA (C.G.)</div>
 <div class="text-xs mt-1 text-gray-800 font-semibold">
@@ -103,5 +103,6 @@ document.getElementById("logoUpload").addEventListener("change", function(e){
 </script>
 </body>
 </html>
+
 
 
